--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
+theme: minima
+title: Marketing Campaign Benchmarks
+author: @contentmojo
+email: contentmojo@github.com
+description: > # this means to ignore newlines until "baseurl:" This is a page dedicated to publish quarterly Marketing Campaign metrics.
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: contentmojo
+github_username:  contentmojo
 
 show_excerpts: true # set to false to remove excerpts on the homepage
